# jnxlibc

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.in  README.md  build_and_install.sh  configure  index.html  install_manifest.txt  jnxlist.out  main.c  params.json  testbay.c
cmake_modules/: cmake_uninstall.cmake.in
docs/html/: annotated.html  classes.html  dir_220d2bd384b446346a1cdcf02b1b2295.html  dir_3141607e0680ae45a6ff0136b36ded87.html  dir_622d6f97fa5c1d8a93db70ff15b3a1df.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b279a216c397ff0404c535bbf0b989ad.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.html  dir_c72b25b75abe208498b36a3e44a3726c.html  dir_cbcef1ec9e0a43d30db08e1b94c02b4a.html  dir_ed55543a4f49c4b89fb207b09e7017b2.html  files.html  functions.html  functions_vars.html  globals.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_j.html  globals_m.html  globals_r.html  globals_t.html  globals_type.html  globals_u.html  index.html  jnxbase64_8h.html  jnxbase64_8h_source.html  jnxbtree_8h.html  jnxbtree_8h_source.html  jnxcheck_8h.html  jnxcheck_8h_source.html  jnxdebug_8h.html  jnxdebug_8h_source.html  jnxencoder_8h.html  jnxencoder_8h_source.html  jnxfile_8h.html  (+85 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  functions_0.js  search.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  (+19 more)
docs/man/man3/: .3  B_tree.3  B_tree_node.3  B_tree_record.3  JNXFAIL.3  JNX_GUID_STATE_SUCCESS.3  JNX_HTTP_STATE_UNKNOWN.3  LOG_FILE.3  MAX_TRACE.3  _data.3  bucket_len.3  (+206 more)
framework/test/: test_jnxdebug
opt/: jnxsql_interface.c  jnxsql_interface.h
platform/linux/: Makefile.in  build_and_install  configure
setup/: Makefile.in  build_and_install  configure  jnxbase64.gcno  jnxbtree.gcno  jnxfile.gcno  jnxhash.gcno  jnxlist.gcno  jnxlog.gcno  jnxnetwork.gcno  jnxqueue.gcno  jnxsocket.gcno  jnxstack.gcno  jnxstring.gcno  jnxterm.gcno  jnxthread.gcno  jnxunixsocket.gcno  jnxvector.gcno
setup/test/: encoder  jnx_event  run_tests  test_jnxbase64.c  test_jnxbtree.c  test_jnxencoder.c  test_jnxevent.c  test_jnxhash.c  test_jnxhash_ts.c  test_jnxlist.c  test_jnxlog.c  test_jnxmem.c  test_jnxnetwork.c  test_jnxqueue.c  test_jnxquicksort.c  test_jnxsignal.c  test_jnxsocket.c  test_jnxstack.c  test_jnxstack_ts.c  test_jnxterm.c  test_jnxthread.c  test_jnxunixsocket.c  test_jnxvector.c  test_jnxvector_ts.c
src/: .jnxfile.c.swo  jnxbase64.h  jnxbtree.c  jnxbtree.h  jnxdebug.c  jnxdebug.h  jnxdlist.c  jnxdlist.h  jnxfile.c  jnxfile.h  jnxhash.c  jnxhash.h  jnxheaders.h  jnxlist.c  jnxlist.h  jnxlog.c  jnxlog.h  jnxnetwork.c  jnxnetwork.h  jnxstack.c  jnxstack.h  jnxstring.c  jnxstring.h  jnxterm.c  jnxterm.h  jnxvector.c  jnxvector.h  list.c  list.h  network.c  network.h  sql_interface.c  sql_interface.h  testbay.c
src/alg/: CMakeLists.txt  jnx_encoder.c  jnx_guid.c  jnx_quicksort.c  jnxbase64.c  jnxbase64.h  jnxencoder.c  jnxencoder.h  jnxguid.c  jnxguid.h  jnxquicksort.c  jnxquicksort.h
src/bug/: CMakeLists.txt  jnx_check.c  jnx_check.h  jnx_log.h  jnxcheck.c  jnxcheck.h  jnxdebug.c  jnxdebug.h  jnxlog.c  jnxlog.h
src/dat/: CMakeLists.txt  jnx_btree.c  jnx_hash.c  jnx_list.c  jnx_list.h  jnx_queue.c  jnx_stack.c  jnx_vector.c  jnxbtree.c  jnxbtree.h  jnxhash.c  jnxhash.c.orig  jnxhash.h  jnxlist.c  jnxlist.c.orig  jnxlist.h  jnxqueue.c  jnxqueue.h  jnxstack.c  jnxstack.h  jnxvector.c  jnxvector.h
src/evt/: jnxevent.c  jnxevent.h
src/io/: CMakeLists.txt  jnx_file.c  jnx_file.h  jnxfile.c  jnxfile.h
src/ipc/: CMakeLists.txt  jnx_ipc_socket.c  jnx_ipc_socket.h  jnxunixsocket.c  jnxunixsocket.c_  jnxunixsocket.h
src/mem/: jnxdebug.c  jnxdebug.h  jnxmem.c  jnxmem.c.orig  jnxmem.h
src/net/: CMakeLists.txt  jnx_network.c  jnx_network.h  jnx_socket.c  jnx_socket.h  jnx_tcp_socket.c  jnx_tcp_socket.h  jnx_udp_socket.c  jnx_udp_socket.h  jnxnetwork.c  jnxnetwork.h  jnxsocket.c  jnxsocket.c.orig  jnxsocket.h
src/sig/: CMakeLists.txt  jnx_signal.c  jnxsignal.c  jnxsignal.h
src/sys/: CMakeLists.txt  jnx_string.c  jnx_term.c  jnxlog.c  jnxlog.c.orig  jnxlog.h  jnxstring.c  jnxstring.h  jnxterm.c  jnxterm.h  jnxtypes.h
src/thr/: CMakeLists.txt  jnx_thread.c  jnx_thread.h  jnxthread.c  jnxthread.c.orig  jnxthread.h
test/: .testbay.c.swo  CMakeCache.txt  Makefile.test  bob  bob.c  cmake_install.cmake  config.conf  debug  file_test  fileo  foo  hash  hello  hello.c  list  listo  main  mem  run_tests  run_tests_valgrind  test  test.txt  test_btree  test_jnxbase64.c  test_jnxbtree.broken  test_jnxbtree.c  test_jnxdebug.c  test_jnxdlist.c  test_jnxfile.c  test_jnxhash  test_jnxhash.c  test_jnxhash_ts.c  test_jnxlist.c  test_jnxlist_ts.c  test_jnxlog.c  test_jnxmem.c  test_jnxnetwork.c  test_jnxqueue_ts.c  test_jnxstack.c  test_jnxstack_ts.c  (+9 more)
test/performance/: run_tests  test_tcp_data_push_ipv4.c  test_tcp_data_push_ipv6  test_tcp_data_push_ipv6.c  test_udp_data_push_ipv4.c  test_udp_data_push_ipv6.c
test/unit/: CMakeLists.txt  logger.conf  main.c  run_tests  test  test_jnxbtree  test_jnxbtree.c  test_jnxbtree_ts  test_jnxbtree_ts.c  test_jnxencoder  test_jnxencoder.c  test_jnxexceptions.c  test_jnxfile  test_jnxfile.c  test_jnxguid  test_jnxguid.c  test_jnxhash  test_jnxhash.c  test_jnxhash_ts  test_jnxhash_ts.c  test_jnxipcsocket.c  test_jnxlist  test_jnxlist.c  test_jnxlist_ts  test_jnxlist_ts.c  test_jnxlog  test_jnxlog.c  test_jnxnetwork  test_jnxnetwork.c  test_jnxqueue  test_jnxqueue.c  test_jnxqueue_ts  test_jnxqueue_ts.c  test_jnxquicksort  test_jnxquicksort.c  test_jnxsignal  test_jnxsignal.c  test_jnxsocket  test_jnxsocket.c  test_jnxstack  (+19 more)
test_run-prefix/tmp/: test_run-cfgcmd.txt
(+70 files in other folders)
